[package]
name = "nodeeditor"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wacom-sys = "0.1.0"
serde = "1.0.147"
serde_derive = "1.0.147"
num-traits = {version = "0.2.15"}
sdl2 = {version  = "0.35.2", features=["unsafe_textures"]}
image = { version = "0.23.14", default-features = false, features = ["jpeg","png"] } 
